test/e2e/testdata/tlsroute-terminate-authorization-client-ip.yaml
# Certificate for TLS termination - Wildcard cert for *.example.com
# openssl req -x509 -sha256 -nodes -days 3650 -newkey rsa:2048 -subj '/O=example Inc./CN=*.example.com' -keyout tls.key -out tls.crt
apiVersion: v1
data:
  tls.key: LS0tLS1CRUdJTiBQUklWQVRFIEtFWS0tLS0tCk1JSUV2Z0lCQURBTkJna3Foa2lHOXcwQkFRRUZBQVNDQktnd2dnU2tBZ0VBQW9JQkFRRG5zbHN5Q21VQmxmMTgKT0htNkNKRkdYeGNMWkF2TGhyWkdZK0NGTFpwTW5IaVhDTTRYLzB4V0ViS2d3TGJTd3c4RURISXZlVElSajNvQQpta2l0d2t2UUZiUkZSUnlDSlNjOXNMb1MzY2hPcEp5TlUxdEYrenYraHAvQlR6L0VGMHBqMUZJdDBYc0g3UlZIClRaaDBnUzdlYm53T3RhNU51WEFuYmFCakhxdVJmQVZPUWcrZDNCSU9kZXhzZkJvNFN5TEc4VHRsYis4bXVOY24KTll6UFVtQW01NkE4SmNsblVxc2U3aTVDWXdZeWlRZnJCNk5NS043c1YwR2p6enE0RHB5WHMxZWoxZmpGQmpKUwpxVlAzTm5FcEoyaWFsb [...]
  tls.crt: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURXakNDQWtLZ0F3SUJBZ0lVSk9taGNTTHR6LzVRU2tvcitaOFpvOWVocnlNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd0x6RVZNQk1HQTFVRUNnd01aWGhoYlhCc1pTQkpibU11TVJZd0ZBWURWUVFEREEwcUxtVjRZVzF3YkdVdQpZMjl0TUI0WERUSTFNVEl3TlRBNE1EWXdNMW9YRFRNMU1USXdNekE0TURZd00xb3dMekVWTUJNR0ExVUVDZ3dNClpYaGhiWEJzWlNCSmJtTXVNUll3RkFZRFZRUUREQTBxTG1WNFlXMXdiR1V1WTI5dE1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQTU3SmJNZ3BsQVpYOWZEaDV1Z2lSUmw4WEMyUUx5NGEyUm1QZwpoUzJhVEp4NGx3ak9GL [...]
kind: Secret
metadata:
  name: tls-terminate-authorization-certificate
  namespace: gateway-conformance-infra
type: kubernetes.io/tls
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: tls-terminate-authorization-backend
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "envoy-gateway"
  listeners:
    - name: tls-terminate
      protocol: TLS
      port: 8443
      tls:
        mode: Terminate
        certificateRefs:
          - group: ""
            kind: Secret
            name: tls-terminate-authorization-certificate
      allowedRoutes:
        kinds:
          - kind: TLSRoute
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: tls-terminate-authorization-blocked
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: tls-terminate-authorization-backend
      sectionName: tls-terminate
  hostnames:
    - "blocked-terminate.example.com"
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: tls-terminate-authorization-allowed
  namespace: gateway-conformance-infra
spec:
  parentRefs:
    - name: tls-terminate-authorization-backend
      sectionName: tls-terminate
  hostnames:
    - "allowed-terminate.example.com"
  rules:
    - backendRefs:
        - name: infra-backend-v1
          port: 8080
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: tls-terminate-authorization-blocked-policy
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: TLSRoute
      name: tls-terminate-authorization-blocked
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          clientCIDRs:
            - 192.168.254.0/24  # This CIDR won't match test client
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: tls-terminate-authorization-allowed-policy
  namespace: gateway-conformance-infra
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: TLSRoute
      name: tls-terminate-authorization-allowed
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          clientCIDRs:
            - 0.0.0.0/0  # Allow all IPv4
            - ::/0       # Allow all IPv6
